# N-Body-Simulation

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_cuda.txt  README.md  build.sh  cp_xauth.sh  cuda_sbatch.sh  debug.sh  exclude.list  hybrid_sbatch.sh  mpi_sbatch.sh  openmp_sbatch.sh  pthread_sbatch.sh  release.sh  rsync_all_to_slurm.sh  rsync_build_to_slurm.sh  rsync_slurm_to_local.sh  run.sh  salloc_hybrid.sh
include/: pthread_barrier.h
include/nbody/: body.hpp  cuda_body.hpp
report/: report.ipynb  report.md
src/: cuda.cu  cuda_device_info.cu  cuda_imgui.cu  hybrid_mpi_openmp.cpp  hybrid_mpi_openmp_imgui.cpp  mpi.cpp  mpi_imgui.cpp  openmp.cpp  openmp_imgui.cpp  pthread.cpp  pthread_barrier.c  pthread_imgui.cpp  template.cpp
